--- a/paginas/noticias.html
+++ b/paginas/noticias.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Axie origin</title>
     <link rel="icon" href="../resources/icon/icono.png">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
          <a class="nav" href="../index.html"><img src="../resources/icon/icono.png" class="logo" alt="logo home"></a>
          <span></span> 
         </div> 
-        <div class="div2">
+        <div class="menu__div2">
          <a href="../paginas/noticias.html" class="boton__nav nav hover">Noticias</a>
          <a href="../paginas/contacto.html" class="boton__nav nav hover">Contacto</a>
          <a href="../paginas/cartas.html" class="boton__nav nav hover">Cartas</a>
