--- a/paginas/cartas.html
+++ b/paginas/cartas.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Axie origin</title>
+    <!-- SEO -->
+    <!-- KEYWORDS -->
+    <meta name="keywords" content="SLP, AXS, NFT, Axie, Crypto">
+    <title>Cartas - Axie origin</title>
+    <!-- DESCRIPCION -->
+    <meta name="description" content="Explora la coleccion de cartas, axies, noticias y mucho mas sobre el universo de Axie infinity">
     <link rel="icon" href="../resources/icon/icono.png">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -78,7 +83,7 @@
 <br>
 <br>
  <section style="margin-bottom: 100px;">
-  <h2 class="titulo__cartas">Planta</h2> 
+  <h1 class="titulo__cartas">Planta</h1> 
   <div class="grid__container__card">
     <div class="grid__card">
       <img src="https://axie-tools.fans/cards/season-20/es/plant-back-12.webp" alt="planta1">
@@ -133,7 +138,7 @@
   </section>
     
     <!--inicio de footer-->
-<footer>
+<footer class="bg-acuatico">
     <div>
       <span>© 2022 uJsi</span>
           <a class="hover" href="../paginas/contacto.html">¿Como puedo ser parte de Axie?</a>
