--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Axie origin</title>
+    <!-- SEO -->
+    <!-- KEYWORDS -->
+    <meta name="keywords" content="SLP, AXS, NFT, Axie, Crypto">
+    <title>Contacto - Axie origin</title>
+    <!-- DESCRIPCION -->
+    <meta name="description" content="Explora la coleccion de cartas, axies, noticias y mucho mas sobre el universo de Axie infinity">
     <link rel="icon" href="../resources/icon/icono.png">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
