--- a/paginas/modosdejuego.html
+++ b/paginas/modosdejuego.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Axie origin</title>
+    <!-- SEO -->
+    <!-- KEYWORDS -->
+    <meta name="keywords" content="SLP, AXS, NFT, Axie, Crypto">
+    <title>Modos - Axie origin</title>
+    <!-- DESCRIPCION -->
+    <meta name="description" content="Explora la coleccion de cartas, axies, noticias y mucho mas sobre el universo de Axie infinity">
     <link rel="icon" href="../resources/icon/icono.png">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -75,15 +80,15 @@
 <br>
     
 <section class="container">
-        <h3 class="titulo__juego">PVE</h3>
+    <h1 class="titulo__juego">PVE</h1>
     <p class="p__mjuego">
         Es el modo aventura donde el jugador batalla con su axies contra NPC.
     </p>
-    <h3 class="titulo__juego">PVP</h3>
+    <h2 class="titulo__juego">PVP</h2>
     <p class="p__mjuego">
         Es un modo de juego, en el que el jugador batalla contra otros jugadores, en este modo el jugador puede ganar copas, SLP y AXS
     </p>
-    <h3 class="subtitulo__not">Video axie gameplay</h3>
+    <h3 class="titulo__juego__nuevo">Video axie gameplay</h3>
     <!--Video de axie-->
     <iframe class="yout__vid" width="560" height="315" src="https://www.youtube.com/embed/7lVDCk-0ero" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </section>
@@ -93,7 +98,7 @@
     <img src="../img/birder.png" alt="bird foto derecha" style="float: right;">
 </article>
     <!--inicio de footer-->
-<footer>
+<footer class="bg-bestia">
     <div>
         <span>© 2022 uJsi</span>
             <a class="hover" href="../paginas/contacto.html">¿Como puedo ser parte de Axie?</a>
