--- a/paginas/noticias.html
+++ b/paginas/noticias.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Axie origin</title>
+    <!-- SEO -->
+    <!-- KEYWORDS -->
+    <meta name="keywords" content="SLP, AXS, NFT, Axie, Crypto">
+    <title>Noticias - Axie origin</title>
+    <!-- DESCRIPCION -->
+    <meta name="description" content="Explora la coleccion de cartas, axies, noticias y mucho mas sobre el universo de Axie infinity">
     <link rel="icon" href="../resources/icon/icono.png">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -78,12 +83,12 @@
 <br>
 <section style="margin-bottom: 100px;" class="container">
     <article>
-        <h3 class="subtitulo__not">Ultimas novedades</h3>   
+        <h1 class="subtitulo__not">Ultimas novedades</h1>   
         <p class="p__not">
             La temporada 20 de Axie Infinity dio inicio este 9 de febrero y con ello entraron en vigencia los cambios anunciados hace algunos días, que parecen estar impulsando el alza del precio del SLP en el mercado.Los servidores del juego entraron en mantenimiento por dos horas sin que hubiera un anuncio previo sobre el inicio de la nueva temporada o season 20. Sin embargo, los fanáticos del juego en redes sociales como Twitter y Discord veían venir la llegada de esta nueva etapa.
             Luego de dos horas de mantenimiento, se anunciaba el inicio oficial de la vigésima temporada de Axie Infinity en el canal de Discord del videojuego. Con ella, entraron en vigencia una serie de cambios en la dinámica del juego.
         </p>
-        <h3 class="subtitulo__not">¿Que es axie infinity?</h3>
+        <h2 class="subtitulo__not">¿Que es axie infinity?</h2>
         <p class="p__not">
             Axie Infinity es uno de los títulos más exitosos y de mayor renombre entre los juegos basados en tecnología blockchain, y lo es por su propuesta de juego y por la fórmula mediante la cual los usuarios están generando ingresos a través de él.
             Para resumirlo de forma entendible, el título se basa en reunir a los mejores Axies, criaturas que luego podemos usar para combatir contra otros jugadores o contra la IA del juego.
@@ -96,7 +101,7 @@
 </article>
 </section>
 <!--inicio de footer-->
-<footer>
+<footer class="bg-pajaro">
     <div>
         <span>© 2022 uJsi</span>
         <a href="../paginas/contacto.html">¿Como puedo ser parte de Axie?</a>
