--- a/paginas/cartas.html
+++ b/paginas/cartas.html
@@ -82,6 +82,7 @@
 <br>
 <br>
 <br>
+<!--inicio grid-->
  <section style="margin-bottom: 100px;">
   <h1 class="titulo__cartas">Planta</h1> 
   <div class="grid__container__card">
