--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -87,7 +87,7 @@
     </header>
     
     <main>
-        <!--contenido principal-->
+        <!--formulario-->
     
         <br>
         <form class="cuadro__form" action>
