--- a/paginas/modosdejuego.html
+++ b/paginas/modosdejuego.html
@@ -78,7 +78,7 @@
        </section>
   </header>     
 <br>
-    
+<!--inicio info de juegos-->
 <section class="container">
     <h1 class="titulo__juego">PVE</h1>
     <p class="p__mjuego">
