--- a/paginas/noticias.html
+++ b/paginas/noticias.html
@@ -81,6 +81,7 @@
        </section>
   </header>    
 <br>
+<!--inicio noticias -->
 <section style="margin-bottom: 100px;" class="container">
     <article>
         <h1 class="subtitulo__not">Ultimas novedades</h1>   
