--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
           </div>
           <div class="nav__mobile__container__axies__more" id="myMoreAxie">
             <div>
+              <a href="./paginas/axies.html">Info</a>
+            </div>
+            <div>
               <a href="./paginas/acuatico.html">Acuatico</a>
             </div>
             <div>
@@ -90,7 +93,7 @@
           <a href="./paginas/contacto.html">Contacto</a>
         </div>
         <div class="nav__container__axies nav__container__menu">
-          <a href="./paginas/acuatico.html">Axies</a>
+          <a href="./paginas/axies.html">Axies</a>
           <div class="dropdown">
               <div>
                   <div>
