--- a/paginas/modosdejuego.html
+++ b/paginas/modosdejuego.html
@@ -42,13 +42,13 @@
               <a href="./acuatico.html">Acuatico</a>
             </div>
             <div>
-              <a href="">Bestia</a>
+              <a href="./bestia.html">Bestia</a>
             </div>
             <div>
-              <a href="">Pajaro</a>
+              <a href="./pajaro.html">Pajaro</a>
             </div>
             <div>
-              <a href="">Planta</a>
+              <a href="./planta.html">Planta</a>
             </div>
           </div>
         </div>
@@ -88,20 +88,20 @@
           <a href="./contacto.html">Contacto</a>
         </div>
         <div class="nav__container__axies nav__container__menu">
-          <a href="./acuatico.html">Axies</a>
+          <a href="./axies.html">Axies</a>
           <div class="dropdown">
               <div>
                   <div>
                       <a href="./acuatico.html">Acuatico</a>
                   </div>
                   <div>
-                      <a href="">Bestia</a>
+                      <a href="./bestia.html">Bestia</a>
                   </div>
                   <div>
-                      <a href="">Pajaro</a>
+                      <a href="./pajaro.html">Pajaro</a>
                   </div>
                   <div>
-                      <a href="">Planta</a>
+                      <a href="./planta.html">Planta</a>
                   </div>
               </div>
           </div>
