--- a/paginas/noticias.html
+++ b/paginas/noticias.html
@@ -39,6 +39,9 @@
           </div>
           <div class="nav__mobile__container__axies__more" id="myMoreAxie">
             <div>
+              <a href="./axies.html">Info</a>
+            </div>
+            <div>
               <a href="./acuatico.html">Acuatico</a>
             </div>
             <div>
@@ -88,7 +91,7 @@
           <a href="./contacto.html">Contacto</a>
         </div>
         <div class="nav__container__axies nav__container__menu">
-          <a href="./acuatico.html">Axies</a>
+          <a href="./axies.html">Axies</a>
           <div class="dropdown">
               <div>
                   <div>
