--- a/paginas/modosdejuego.html
+++ b/paginas/modosdejuego.html
@@ -130,28 +130,112 @@
     <article class="modos__container__foto">
       <div class="modos__container__foto__info">
         <h1>Modos de juego</h1>
-        <p>Lunacia se divide en parcelas de tierra tokenizadas, llamadas Terra, que los jugadores pueden comprar, alquilar y desarrollar.
-          ¡Los terratenientes pueden actualizar y personalizar su territorio para albergar tiendas, balizas de invocación de quimeras, producir recursos, albergar NPC e incluso actuar como puntos de acceso para mazmorras!
-          Los desarrolladores independientes, los creadores de contenido y las empresas podrán construir sin problemas sobre Lunacia utilizando agujeros de gusano en los que se puede hacer clic como plataforma de lanzamiento para este contenido. ¡Las posibilidades son infinitas!</p>
       </div>
     </article>
   </section>
-  <section class="modos__data">
-    <div>
-      <h2>Lands</h2>
-      <p>Chimera estará presente en toda Lunacia, lo que hará que la recolección de recursos sea una tarea difícil. Los jugadores podrán enfrentarse a Chimera en batallas en tiempo real, ya sea solos o en grupos. Chimera arrojará una variedad de recursos, elementos y planos que se utilizan para mejorar el territorio y los ejes individuales.</p>
-    </div>
-    <div class="modos__data__info">
+  <section class="land">
+    <article class="land__container">
       <div>
-        <img src="https://cdn.axieinfinity.com/assets/images/29f829fc38dd027c4569281296609d09.png" alt="triangulo data">
+        <h2>Land Lunacia</h2>
+        <p>Lunacia is divided up into tokenized plots of land, called Terra, which can be purchased, rented out, and developed by players.
+
+          Landholders can upgrade and customize their territory to host shops, Chimera summoning beacons, produce resources, house NPCs, and even act as access points for dungeons!
+          
+          Independent developers, content creators, and companies will be able to seamlessly build on top of Lunacia using clickable wormholes as a launchpad for this content. The possibilities are infinite!</p>
       </div>
-      <div>
-        <img src="../img/flechamodos.png" alt="flecha">
+      <div class="land__container__img">
+        <div>
+          <img src="https://cdn.axieinfinity.com/assets/images/29f829fc38dd027c4569281296609d09.png" alt="">
+        </div>
+        <div>
+          <img src="../img/flechamodos.png" alt="">
+        </div>
+        <div>
+          <img src="https://cdn.axieinfinity.com/assets/images/ad2b769da2fc7dccd17533fd59ce60bb.png" alt="">
+        </div>
       </div>
-      <div>
-        <img src="https://cdn.axieinfinity.com/assets/images/ad2b769da2fc7dccd17533fd59ce60bb.png" alt="land">
+    </article>
+  </section>
+  <br>
+  <section class="mochileros">
+    <article class="mochileros__container">
+      <div class="mochileros__container__top">
+        <img src="https://cdn.axieinfinity.com/assets/images/f5a4d091d95befc2f96fe5ea787daa8f.png" alt="axies mochileros">
       </div>
-    </div>
+      <div class="mochileros__container__mid">
+        <h2>HARVEST - MINE - BUILD</h2>
+        <p>Resources will spawn across Lunacia and be used to upgrade both land and Axies.
+
+          Some resources are more likely to spawn in different habitats while other resources are tied to the 7 moons of Lunacia and will only spawn when a certain moon is shining.
+          
+          Each node will only be able to host a certain number of Axie parties at a time. After a certain amount of time, players will be able to challenge the Axies of another player in a battle to take their spot at the node. Otherwise, Axie parties can wait in line and wait for the parties in front of them to fill up their packs.</p>
+      </div>
+      <div class="mochileros__container__bot">
+        <div>
+          <div>
+            <img src="../img/plantamodo.png" alt="">
+          </div>
+          <h3>Planta</h3>
+        </div>
+        <div>
+          <div>
+            <img src="../img/piedramodo.png" alt="">
+          </div>
+          <h3>Piedra</h3>
+        </div>
+        <div>
+          <div>
+            <img src="../img/maderamodo.png" alt="">
+          </div>
+          <h3>Madera</h3>
+        </div>
+        <div>
+          <div>
+            <img src="../img/diamantemodo.png" alt="">
+          </div>
+          <h3>Cristal</h3>
+        </div>
+        <div>
+          <div>
+            <img src="../img/carbonmodo.png" alt="">
+          </div>
+          <h3>Mineral</h3>
+        </div>
+        <div>
+          <div>
+            <img src="../img/slimemodo.png" alt="">
+          </div>
+          <h3>Slime</h3>
+        </div>
+      </div>
+    </article>
+  </section>
+  <br>
+  <section class="pve">
+    <article class="pve__container">
+      <div class="pve__container__top">
+        <img src="../img/imgpve.png" alt="">
+      </div>
+      <div class="pve__container__mid">
+        <div>
+          <img src="https://cdn.axieinfinity.com/assets/images/7fce229bb7fe142df14e3f1294483aee.apng" alt="dragon">
+        </div>
+        <div>
+          <h2>REAL-TIME PVE BATTLES</h2>
+          <p>Chimera will be present all across Lunacia, making resource gathering a difficult task. Players will be able to take on Chimera in real-time battles either alone or in groups.
+            Chimera will drop an assortment of resources, items, and blueprints used to upgrade territory and individual Axies.</p>
+        </div>
+      </div>
+      <div class="pve__container__bot">
+        <div>
+          <h2>PLAY WITH FRIENDS</h2>
+          <p>Form alliances with other players to combine land, pool rare resources, and produce Artifacts - limited edition items that provide powerful guild buffs which can turn a team of adventurers into powerful warlords.</p>
+        </div>
+        <div>
+          <img src="https://cdn.axieinfinity.com/assets/images/f6aa848eb742f52db6b1fc7e7fe88f51.apng" alt="golem">
+        </div>
+      </div>
+    </article>
   </section>
   
   
