--- a/paginas/modosdejuego.html
+++ b/paginas/modosdejuego.html
@@ -137,11 +137,7 @@
     <article class="land__container">
       <div>
         <h2>Land Lunacia</h2>
-        <p>Lunacia is divided up into tokenized plots of land, called Terra, which can be purchased, rented out, and developed by players.
-
-          Landholders can upgrade and customize their territory to host shops, Chimera summoning beacons, produce resources, house NPCs, and even act as access points for dungeons!
-          
-          Independent developers, content creators, and companies will be able to seamlessly build on top of Lunacia using clickable wormholes as a launchpad for this content. The possibilities are infinite!</p>
+        <p>Lunacia se divide en parcelas de tierra tokenizadas, llamadas Terra, que los jugadores pueden comprar, alquilar y desarrollar. ¡Los terratenientes pueden actualizar y personalizar su territorio para albergar tiendas, balizas de invocación de quimeras, producir recursos, albergar NPC e incluso actuar como puntos de acceso para mazmorras! Los desarrolladores independientes, los creadores de contenido y las empresas podrán construir sin problemas sobre Lunacia utilizando agujeros de gusano en los que se puede hacer clic como plataforma de lanzamiento para este contenido. ¡Las posibilidades son infinitas!</p>
       </div>
       <div class="land__container__img">
         <div>
@@ -164,11 +160,7 @@
       </div>
       <div class="mochileros__container__mid">
         <h2>HARVEST - MINE - BUILD</h2>
-        <p>Resources will spawn across Lunacia and be used to upgrade both land and Axies.
-
-          Some resources are more likely to spawn in different habitats while other resources are tied to the 7 moons of Lunacia and will only spawn when a certain moon is shining.
-          
-          Each node will only be able to host a certain number of Axie parties at a time. After a certain amount of time, players will be able to challenge the Axies of another player in a battle to take their spot at the node. Otherwise, Axie parties can wait in line and wait for the parties in front of them to fill up their packs.</p>
+        <p>Los recursos se generarán en Lunacia y se utilizarán para mejorar tanto la tierra como Axies. Es más probable que algunos recursos se reproduzcan en diferentes hábitats, mientras que otros recursos están vinculados a las 7 lunas de Lunacia y solo se generarán cuando brille una determinada luna. Cada nodo solo podrá albergar una cierta cantidad de fiestas Axie a la vez. Después de una cierta cantidad de tiempo, los jugadores podrán desafiar a los Axies de otro jugador en una batalla para tomar su lugar en el nodo. De lo contrario, los grupos de Axie pueden esperar en la fila y esperar a que los grupos que están frente a ellos llenen sus paquetes.</p>
       </div>
       <div class="mochileros__container__bot">
         <div>
@@ -221,15 +213,14 @@
           <img src="https://cdn.axieinfinity.com/assets/images/7fce229bb7fe142df14e3f1294483aee.apng" alt="dragon">
         </div>
         <div>
-          <h2>REAL-TIME PVE BATTLES</h2>
-          <p>Chimera will be present all across Lunacia, making resource gathering a difficult task. Players will be able to take on Chimera in real-time battles either alone or in groups.
-            Chimera will drop an assortment of resources, items, and blueprints used to upgrade territory and individual Axies.</p>
+          <h2>BATALLAS PVE EN TIEMPO REAL</h2>
+          <p>Chimera estará presente en toda Lunacia, lo que hará que la recolección de recursos sea una tarea difícil. Los jugadores podrán enfrentarse a Chimera en batallas en tiempo real, ya sea solos o en grupos. Chimera arrojará una variedad de recursos, elementos y planos que se utilizan para mejorar el territorio y los ejes individuales.</p>
         </div>
       </div>
       <div class="pve__container__bot">
         <div>
-          <h2>PLAY WITH FRIENDS</h2>
-          <p>Form alliances with other players to combine land, pool rare resources, and produce Artifacts - limited edition items that provide powerful guild buffs which can turn a team of adventurers into powerful warlords.</p>
+          <h2>Jugar con amigos</h2>
+          <p>Forme alianzas con otros jugadores para combinar tierras, juntar recursos raros y producir artefactos: artículos de edición limitada que brindan poderosos beneficios para el gremio que pueden convertir a un equipo de aventureros en poderosos señores de la guerra.</p>
         </div>
         <div>
           <img src="https://cdn.axieinfinity.com/assets/images/f6aa848eb742f52db6b1fc7e7fe88f51.apng" alt="golem">
